experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/619/reduced-619/tmp/jadx/tmp/output.txt
Test.java:51: error: incompatible types: possible lossy conversion from float to long
                instanceCount = ((float) j) - 200.0f;
                                            ^
Test.java:258: error: incompatible types: possible lossy conversion from float to long
                long j3 = fFld1;
                          ^
Note: Test.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
